Closed
Bug 1302084
Opened 7 years ago
Closed 7 years ago
Strange window popped up after tapping the stop button "||"
Categories
(Firefox for Android Graveyard :: Audio/Video, defect, P1)
Tracking
(firefox52 fixed)
RESOLVED
FIXED
Firefox 52
Tracking | Status | |
---|---|---|
firefox52 | --- | fixed |
People
(Reporter: cynthiatang, Assigned: alwu)
References
()
Details
Attachments
(1 file, 1 obsolete file)
STR: 1. Launch Firefox app 2. Go to https://www.internet-radio.com 3. Listen to your favorite radio stations 4. Swipe down from the top edge of the screen to view the notification 5. Tap the stop button "||" Actual: - Strange window popped up. It shows "Can't play the video." - User cannot scroll the webpage anymore after tapping "OK" to close the window "Can't play the video" - Please the video: https://youtu.be/qeZv8jeR5sk Expected: - No strange window Device: Nexus 5 Android: 6.0.1 Firefox: 50.0a1 (2016-09-11)
Updated•7 years ago
|
Updated•7 years ago
|
Attachment #8790254 -
Attachment is obsolete: true
Comment 1•7 years ago
|
||
Maybe it's just the website showing an alert? Anyways, alwu, what do you think?
Flags: needinfo?(alwu)
Assignee | ||
Comment 2•7 years ago
|
||
hmm, it looks like strange, I'll debug it to check what happened.
Assignee: nobody → alwu
Flags: needinfo?(alwu)
Comment 3•7 years ago
|
||
I set this to block bug 1290836 so that we remember looking at this before enabling the feature again.
Blocks: 1290836
Assignee | ||
Comment 4•7 years ago
|
||
Yes, Sebastian was right, it's website JS media player issue. I think the player listens the "pause" event to do something. But we paused the media element from our control instead of the one the website provides, there might cause some inconsistent behaviors in their code. So, should we close this bug? Or you have other good suggestions for this kinds of problem? Thanks!
Flags: needinfo?(s.kaspari)
Comment 5•7 years ago
|
||
(In reply to Alastor Wu [:alwu] from comment #4) > I think the player listens the "pause" event to do something. But we paused > the media element from our control instead of the one the website provides, > there might cause some inconsistent behaviors in their code. > > So, should we close this bug? Or you have other good suggestions for this > kinds of problem? In this case I think we can close the bug. However this does not seem to happen in Chrome. Do you have an idea what they could be doing differently?
Flags: needinfo?(s.kaspari) → needinfo?(alwu)
Assignee | ||
Comment 6•7 years ago
|
||
(In reply to Sebastian Kaspari (:sebastian) from comment #5) > In this case I think we can close the bug. However this does not seem to > happen in Chrome. Do you have an idea what they could be doing differently? yeah... you mentioned a good point! After re-debug this issue again, and I found that the strange pop-up windows was called by native Android implementation because the media element got error (caused by their JS implementation) and we didn't handle this error correctly so that it caused the Android media state inconsistent, and then showed the error pop-up window. So, for this website, the ideal situation should be like that the media control would disappear immediately (like Chrome) after we pressed the pause button in control interface.
Flags: needinfo?(alwu)
Comment hidden (mozreview-request) |
Assignee | ||
Updated•7 years ago
|
Attachment #8798302 -
Flags: review?(amarchesini)
Comment 8•7 years ago
|
||
mozreview-review |
Comment on attachment 8798302 [details] Bug 1302084 - the error checking should have highest priority. https://reviewboard.mozilla.org/r/83814/#review82506
Attachment #8798302 -
Flags: review?(amarchesini) → review+
Updated•7 years ago
|
Priority: -- → P1
Assignee | ||
Comment 9•7 years ago
|
||
https://treeherder.mozilla.org/#/jobs?repo=try&revision=2ce8cf101b963ec9091292be54b040b74606aac1
Comment 10•7 years ago
|
||
Pushed by alwu@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/90df44a16505 the error checking should have highest priority. r=baku
Comment 11•7 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/90df44a16505
Status: NEW → RESOLVED
Closed: 7 years ago
status-firefox52:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → Firefox 52
Comment 12•7 years ago
|
||
Tested with Nexus 5 (Android 6.0.1) and LG G4 (Android 5.1) on latest Nightly (2016-10-09). After tapping the stop button "||" from notification, the media control is no longer displayed and I can scroll down the page and play different media content.
Assignee | ||
Comment 13•7 years ago
|
||
(In reply to Sorina Florean [:sorina] from comment #12) > Tested with Nexus 5 (Android 6.0.1) and LG G4 (Android 5.1) on latest > Nightly (2016-10-09). > After tapping the stop button "||" from notification, the media control is > no longer displayed and I can scroll down the page and play different media > content. Yes, that is what we expected. (same behavior with Chrome)
Updated•3 years ago
|
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•