Bug 1302084 - the error checking should have highest priority. r=baku

MozReview-Commit-ID: 9QC5CG7p28M